fleshing out home page and move to ui-bootstrap tabs

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap -->
         <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../bower_components/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet">
         <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <link href="../bower_components/ng-dialog/css/ngDialog-theme-default.min.css" rel="stylesheet" >
         <link href="../bower_components/ng-dialog/css/ngDialog.min.css" rel="stylesheet">
@@ -37,5 +38,7 @@
         <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
         <script src="../bower_components/angular-route/angular-route.min.js"></script>
+        <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+        <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     </body>
 </html>
