--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
         <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <link href="../bower_components/ng-dialog/css/ngDialog-theme-default.min.css" rel="stylesheet" >
         <link href="../bower_components/ng-dialog/css/ngDialog.min.css" rel="stylesheet">
+        <link href="../bower_components/angular-tooltips/dist/angular-tooltips.min.css">
         <link href="../app/styles/main.css" rel="stylesheet">
         <link href="../app/images/favicon.ico" rel="icon" type="image/x-icon" />
 
@@ -40,5 +41,6 @@
         <script src="../bower_components/angular-route/angular-route.min.js"></script>
         <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
         <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script src="../bower_components/angular-tooltips/dist/angular-tooltips.min.js"></script>
     </body>
 </html>
