Modifications to address limited check selection

--- a/app/index.html
+++ b/app/index.html
@@ -42,5 +42,6 @@
         <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
         <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="../bower_components/angular-tooltips/dist/angular-tooltips.min.js"></script>
+        <script src="../bower_components/checklist-model/checklist-model.js"></script>
     </body>
 </html>
